Safe Teleport Fixed, removed unnecessary commands